--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -22,4 +22,4 @@ jobs:
         run: |
           docker build -t my-container .
           docker tag my-container klacroix1/assignment6:latest
-          docker push klacroix1/assignment6:latest
+          docker push klcollin/assignment6:latest
