--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Build and push container
         run: |
           docker build -t my-container .
-          docker tag my-container klacroix1/assignment6:latest
+          docker tag my-container klcollin/assignment6:latest
           docker push klcollin/assignment6:latest
